<resources>
    <string name="app_name">Maths</string>
    <string name="version">Ver 1.0</string>
    <string name="play">Play</string>
    <string name="levels">LEVELS</string>
    <string name="follow">Follow Us</string>
    <string name="soundOff">Sounds Off</string>
    <string name="soundOn">Sounds On</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="ans">Answer</string>
    <string name="enter">Enter</string>
    <string name="complete">All levels completed</string>
    <string name="main_menu">Main menu</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="wrong">Wrong. Try Again!</string>
    <string name="next">Next Level</string>
    <string name="correct">Correct</string>
    <string name="nextdirect">Referring to next Level</string>
    <string name="level1">Level 1</string>
    <string name="level1Q">4, 8, 16, ?</string>
    <string name="level1A">32</string>
    <string name="level1hint">x2</string>
    <string name="level2">Level 2</string>
    <string name="level2Q">2 + 2 x 2 = ?</string>
    <string name="level2A">6</string>
    <string name="level2hint">x + </string>
    <string name="level3">Level 3</string>
    <string name="level3Q">6 = 30\n3 = 15\n7 = 35\n2 = ?</string>
    <string name="level3A">10</string>
    <string name="level3hint">x5 </string>
    <string name="level4">Level 4</string>
    <string name="level4Q">4, 11, 18, ?</string>
    <string name="level4A">25</string>
    <string name="level4hint">+7 </string>
    <string name="level5">Level 5</string>
    <string name="level5Q">5 + 5 x 5 – 5 = ?</string>
    <string name="level5A">25</string>
    <string name="level5hint">x\n + - </string>
    <string name="level6">Level 6</string>
    <string name="level6Q">A + B = 60\nA - B = 40\nA / B = ?</string>
    <string name="level6A">5</string>
    <string name="level6hint">Add the 2 equations for A\nSubtract them for B</string>
    <string name="level7">Level 7</string>
    <string name="level7Q">13, 18 = 31\n 7, 25 = 32\n12, 30 = 42\n26, 13 = ?</string>
    <string name="level7A">39</string>
    <string name="level7hint">+</string>
    <string name="level8">Level 8</string>
    <string name="level8Q">8 – 8 / 4 x 3 = ?</string>
    <string name="level8A">2</string>
    <string name="level8hint">x\n+ - </string>
    <string name="level9">Level 9</string>
    <string name="level9Q">11, 15, 20, ?</string>
    <string name="level9A">26</string>
    <string name="level9hint">+1</string>
    <string name="level10">Level 10</string>
    <string name="level10Q"> 4, 8 = 32\n 5, 3 = 15\n10, 2 = 20\n 8, 6 = ?</string>
    <string name="level10A">48</string>
    <string name="level10hint">x</string>
    <string name="level11">Level 11</string>
    <string name="level11Q">(3\u00b2 – 2\u00b3)\u2076\u2076 = ?</string>
    <string name="level11A">1</string>
    <string name="level11hint">()\n-</string>
    <string name="level12">Level 12</string>
    <string name="level12Q">8 = 72\n2 =  6\n5 = 30\n9 = ?</string>
    <string name="level12A">90</string>
    <string name="level12hint">+1</string>
    <string name="level13">Level 13</string>
    <string name="level13Q">5, 10 = 2\n4, 32 = 8\n4, 20 = ?</string>
    <string name="level13A">5</string>
    <string name="level13hint">+1</string>
    <string name="level14">Level 14</string>
    <string name="level14Q">7, 15, 31, ?</string>
    <string name="level14A">63</string>
    <string name="level14hint">x2+1</string>
    <string name="level15">Level 15</string>
    <string name="level15Q">1\u2075 + 5\u00b2 / 25\u2070 – 5\u00b9 = ?</string>
    <string name="level15A">21</string>
    <string name="level15hint">/\n+ -</string>
    <string name="level16">Level 16</string>
    <string name="level16Q">  1, 5 = 3\n10, 6 = 8\n  7, 1 = ?</string>
    <string name="level16A">4</string>
    <string name="level16hint">+ /2</string>
    <string name="level17">Level 17</string>
    <string name="level17Q">1783, 3178, 8317, ?</string>
    <string name="level17A">7831</string>
    <string name="level17hint">Rotation</string>
    <string name="level18">Level 18</string>
    <string name="level18Q"> 8 = 17\n22 = 45\n15 = 31\n20 = ?</string>
    <string name="level18A">41</string>
    <string name="level18hint">x2+1</string>
    <string name="level19">Level 19</string>
    <string name="level19Q"> 7, 2 = 59\n12, 5 = 717\n18, 9 = 927\n26, 3 = ?</string>
    <string name="level19A">2329</string>
    <string name="level19hint">AB = CD\nC = (A - B)\nD = (A + B)</string>
    <string name="level20">Level 20</string>
    <string name="level20Q"> 6, 5 = 33\n 7, 2 = 17\n11, 4 = 47\n 3, 8 = ?</string>
    <string name="level20A">27</string>
    <string name="level20hint">x2+3</string>
    <string name="level21">Level 21</string>
    <string name="level21Q">83 = 40\n27 = 12\n19 = 8\n91 = ?</string>
    <string name="level21A">44</string>
    <string name="level21hint">-3\n/2</string>
    <string name="level22">Level 22</string>
    <string name="level22Q">4, 2 = 36\n3, 7 = 100\n5, 4 = 81\n1, 6 = ?</string>
    <string name="level22A">49</string>
    <string name="level22hint">(A+B)\u00b2</string>
    <string name="level23">Level 23</string>
    <string name="level23Q">126 = 76\n132 = 32\n208 = 58\n261 = ?</string>
    <string name="level23A">61</string>
    <string name="level23hint">-50,-100,-150,-200</string>
    <string name="level24">Level 24</string>
    <string name="level24Q">5, 3 = 28\n7, 6 = 55\n4, 5 = 21\n3, 8 = ?</string>
    <string name="level24A">17</string>
    <string name="level24hint">A\u00b2+B</string>
    <string name="level25">Level 25</string>
    <string name="level25Q">3, 5 = 34\n8, 2 = 68\n4, 6 = 52\n5, 1 = ?</string>
    <string name="level25A">26</string>
    <string name="level25hint">A\u00b2 + B\u00b2</string>
    <string name="level26">Level 26</string>
    <string name="level26Q">21, 5 = 13\n 7, 9 = 8\n36, 2 = 19\n  1, 7 = ?</string>
    <string name="level26A">4</string>
    <string name="level26hint">(A + B)/2</string>
    <string name="level27">Level 27</string>
    <string name="level27Q">3, 6 = 27\n5, 2 = 17\n4, 1 = 9\n2, 7 = ?</string>
    <string name="level27A">23</string>
    <string name="level27hint">(A x B) + (A + B)</string>
    <string name="level28">Level 28</string>
    <string name="level28Q">32 = 25\n47 = 18\n23 = 52\n74 = ?</string>
    <string name="level28A">81</string>
    <string name="level28hint">AB = CD\nBA = DC</string>
    <string name="level29">Level 29</string>
    <string name="level29Q">   9, 16 =  7\n   4, 36 = 8\n121, 81 = 20\n 25, 49 = ?</string>
    <string name="level29A">12</string>
    <string name="level29hint">\u221AA + \u221AB</string>
    <string name="level30">Level 30</string>
    <string name="level30Q">3, 30 = 11\n10, 8 = 6\n20, 7 = ?</string>
    <string name="level30A">9</string>
    <string name="level30hint">(A + B)/3</string>
    <string name="level31">Level 31</string>
    <string name="level31Q">  7, 3 = 32\n10, 6 = 77\n  8, 2 = 27\n  5, 7 = ?</string>
    <string name="level31A">48</string>
    <string name="level31hint">(A + 1) x (B + 1)</string>
    <string name="level32">Level 32</string>
    <string name="level32Q">624 = 513\n282 = 171\n547 = 436\n271 = ?</string>
    <string name="level32A">160</string>
    <string name="level32hint">-111</string>
    <string name="level33">Level 33</string>
    <string name="level33Q">3, 6 = 27\n5, 8 = 39\n1, 7 = 48\n3, 4 = ?</string>
    <string name="level33A">7</string>
    <string name="level33hint">B\u00b2 - A\u00b2</string>
    <string name="level34">Level 34</string>
    <string name="level34Q">2, 6, 12, 20, ?</string>
    <string name="level34A">30</string>
    <string name="level34hint">+4, +6, +8, +10</string>
    <string name="level35">Level 35</string>
    <string name="level35Q"> 8, 2 = 20\n12, 3 = 40\n10 5 = 52\n 6, 1 = ?</string>
    <string name="level35A">12</string>
    <string name="level35hint">(A x B) + (A / B)</string>
    <string name="level36">Level 36</string>
    <string name="level36Q">  6, 11 = 34\n12,  4 = 48\n10, 15 = ?</string>
    <string name="level36A">100</string>
    <string name="level36hint">(A + B)xn\nwhere n is 2, 3, 4</string>
    <string name="level37">Level 37</string>
    <string name="level37Q">11, 17 = 36\n18, 23 = 25\n4, 12 = 64\n29, 32 = ?</string>
    <string name="level37A">9</string>
    <string name="level37hint">(A - B)\u00b2</string>
    <string name="level38">Level 38</string>
    <string name="level38Q">25, 19 = 36\n 4,  3 = 49\n16, 7 = 81\n 2,  9 = ?</string>
    <string name="level38A">121</string>
    <string name="level38hint">(A - B)\u00b2\n(A + B)\u00b2</string>
    <string name="level39">Level 39</string>
    <string name="level39Q"> A - 4B + 2C = 16\n2A + 7B - 5C = 83\n A +  B -  C = ?</string>
    <string name="level39A">33</string>
    <string name="level39hint">( X + Y )/3</string>
    <string name="level40">Level 40</string>
    <string name="level40Q">1, 3, 8, 19, ?</string>
    <string name="level40A">42</string>
    <string name="level40hint">x2+n\nwhere n is 1, 2, 3, 4</string>
    <string name="level41">Level 41</string>
    <string name="level41Q">9, 6, 2, 3 = 39\n1, 7, 4, 2 = 30\n4, 2, 5, 3 = ?</string>
    <string name="level41A">22</string>
    <string name="level41hint">(A x D) + (B x C)</string>
    <string name="level42">Level 42</string>
    <string name="level42Q">5, 4, 8, 2 = 4\n6, 4, 5, 2 = 14\n7, 3, 4, 3 = ?</string>
    <string name="level42A">9</string>
    <string name="level42hint">(A x B) - (C x D)</string>
    <string name="level43">Level 43</string>
    <string name="level43Q">4, 7, 12, 21, ?</string>
    <string name="level43A">38</string>
    <string name="level43hint">x2-n where n is 1, 2, 3, 4</string>
    <string name="level44">Level 44</string>
    <string name="level44Q">528 = 15\n703 = 10\n397= 19\n700 = ?</string>
    <string name="level44A">7</string>
    <string name="level44hint">ABC = (A + B + C) </string>
    <string name="level45">Level 45</string>
    <string name="level45Q">375 = 390\n128 = 139\n743 = 757\n522 = ?</string>
    <string name="level45A">531</string>
    <string name="level45hint">ABC + A + B + C </string>
    <string name="level46">Level 46</string>
    <string name="level46Q">2, 3, 5, 7, 11, ?</string>
    <string name="level46A">13</string>
    <string name="level46hint">Prime Numbers </string>
    <string name="level47">Level 47</string>
    <string name="level47Q">13, 6, 2 = 20\n 4, 9, 5 = 11\n 9, 2, 3 = 25\n15, 5, 4 = ?</string>
    <string name="level47A">55</string>
    <string name="level47hint">A x C - B</string>
    <string name="level48">Level 48</string>
    <string name="level48Q">59 = 20\n 8 = 3\n20 = 7\n29 = ?</string>
    <string name="level48A">10</string>
    <string name="level48hint">(A + 1)/ 3</string>
    <string name="level49">Level 49</string>
    <string name="level49Q"> 1, 4, 13 =12\n11, 3,  7 = 8\n12, 7, 20 = ? </string>
    <string name="level49A">20</string>
    <string name="level49hint">X + Y = Z</string>
    <string name="level50">Level 50</string>
    <string name="level50Q">2, 6, 12, 20, ?</string>
    <string name="level50A">30</string>
    <string name="level50hint">n + N\u00b2</string>
    <string name="level51">Level 51</string>
    <string name="level51Q">1, 2, 6, 15, ?</string>
    <string name="level51A">31</string>
    <string name="level51hint">+n\u00b2</string>
    <string name="level52">Level 52</string>
    <string name="level52Q">42 = 164\n73=499\n51 = 251\n29 = ?</string>
    <string name="level52A">481</string>
    <string name="level52hint">AB=A\u00b2B\u00b2</string>
</resources>