<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#B8B8B8"
        android:textSize="18sp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="261dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correct">

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#252424"
            android:contentDescription="@string/play"
            android:drawableStart="@drawable/ic_play_arrow_black_24dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="20dp"
            android:gravity="start|center_vertical"
            android:onClick="play"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/play"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/levels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#252424"
            android:contentDescription="@string/levels"
            android:drawableStart="@drawable/ic_apps_black_24dp"
            android:drawableLeft="@drawable/ic_apps_black_24dp"
            android:drawablePadding="20dp"
            android:gravity="start|center_vertical"
            android:onClick="levels"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/levels"
            android:textColor="#FFFFFF" />

        <!--        <Button-->
        <!--            android:id="@+id/follow_us"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="2dp"-->
        <!--            android:background="#252424"-->
        <!--            android:drawableStart="@drawable/ic_people_black_24dp"-->
        <!--            android:drawableLeft="@drawable/ic_people_black_24dp"-->
        <!--            android:drawablePadding="20dp"-->
        <!--            android:gravity="start|center_vertical"-->
        <!--            android:onClick="follow"-->
        <!--            android:paddingLeft="10dp"-->
        <!--            android:paddingRight="10dp"-->
        <!--            android:text="@string/follow"-->
        <!--            android:textColor="#FFFFFF" />-->

        <Button
            android:id="@+id/sounds_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#252424"

            android:gravity="start|center_vertical"
            android:onClick="soundToggle"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#252424"
            android:contentDescription="@string/restart"
            android:drawableStart="@drawable/ic_refresh_black_24dp"
            android:drawableLeft="@drawable/ic_refresh_black_24dp"
            android:drawablePadding="20dp"
            android:gravity="start|center_vertical"
            android:onClick="restart"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/restart"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#252424"
            android:contentDescription="@string/exit"
            android:drawableStart="@drawable/ic_clear_black_24dp"
            android:drawableLeft="@drawable/ic_clear_black_24dp"
            android:drawablePadding="20dp"
            android:gravity="start|center_vertical"
            android:onClick="exit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/exit"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>