<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".levelCreater">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/background"
            android:contentDescription="@string/exit"
            android:onClick="back"
            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/levelNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="sans-serif-thin" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/backgroundInner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/answer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:autofillHints=""
                        android:background="@color/buttonBackground"
                        android:gravity="center"
                        android:hint="@string/ans"
                        android:includeFontPadding="true"
                        android:padding="2dp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#B5B5B5"
                        android:textSize="18sp"
                        android:visibility="visible"
                        tools:ignore="NestedWeights" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/buttonBackground"
                        android:contentDescription="@string/exit"
                        android:onClick="empty"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_clear_black_24dp" />
                </LinearLayout>


                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/buttonDarkBackground"
                    android:contentDescription="@string/ans"
                    android:onClick="hint"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />

                <Button
                    android:id="@+id/enter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:background="@color/buttonDarkBackground"
                    android:contentDescription="@string/enter"
                    android:onClick="enter"
                    android:text="@string/enter"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Grid_height_column"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="1" />

                <Button
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="2" />

                <Button
                    android:id="@+id/l3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="3" />

                <Button
                    android:id="@+id/l4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="4" />

                <Button
                    android:id="@+id/l5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Grid_height_column"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/l6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="6" />

                <Button
                    android:id="@+id/l7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="7" />

                <Button
                    android:id="@+id/l8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="8" />

                <Button
                    android:id="@+id/l9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="9" />

                <Button
                    android:id="@+id/l0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="type"
                    android:tag="0" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="@+id/question"
            app:layout_constraintStart_toStartOf="@+id/question"
            app:layout_constraintTop_toBottomOf="@+id/question" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>